# todo_app_Phase1

./: README.md
todo_app_Phase1/: README.md
todo_app_Phase1/history/prompts/constitution/: 1-constitution-creation.constitution.prompt.md
todo_app_Phase1/history/prompts/project-structure-features/: 001-project-structure-features-spec.spec.prompt.md  002-project-structure-features-clarify.spec.prompt.md
todo_app_Phase1/history/prompts/todo-console-app/: 1-implementation-planning.plan.prompt.md  1-spec-clarification.spec.prompt.md  1-task-generation.tasks.prompt.md
todo_app_Phase1/specs/001-project-structure-features/: spec.md
todo_app_Phase1/specs/001-project-structure-features/checklists/: requirements.md
todo_app_Phase1/todo-console-app/: CLAUDE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_UPDATE.md  README.md  RUNNING_INSTRUCTIONS.md  demo_app.py  pyproject.toml  test_app.py  test_components.py
todo_app_Phase1/todo-console-app/specs/: constitution.md  data-model.md  impl-plan.md  phase1-spec.md  quickstart.md  research.md  tasks.md  tests.md
todo_app_Phase1/todo-console-app/specs/contracts/: todo-api-contract.md
todo_app_Phase1/todo-console-app/src/: cli.py  main.py  models.py  service.py  storage.py  test_app.py  test_validation.py
